--- a/extensions/eclipse-che-theia-plugin-ext/package.json
+++ b/extensions/eclipse-che-theia-plugin-ext/package.json
@@ -14,7 +14,7 @@
   ],
   "dependencies": {
     "@eclipse-che/plugin": "0.0.1",
-    "@eclipse-che/workspace-client": "latest",
+    "@eclipse-che/workspace-client": "eclipse/che-workspace-client#api-activity",
     "@theia/core": "next",
     "@theia/task": "next",
     "@theia/mini-browser": "next",
