Use fork that produced dist folder as well
Change-Id: Ifd8117fa193b3497f4f68f9d4146fac34b8404c0
Signed-off-by: Florent Benoit <fbenoit@redhat.com>

--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "publish:next": "lerna run publish:next"
   },
   "resolutions": {
-    "**/mkdirp": "^0.5.1"
+    "**/mkdirp": "^0.5.1",
+    "@eclipse-che/workspace-client": "benoitf/che-workspace-client#api-activity"
   },
   "workspaces": {
     "packages": [
