fixup! Try buildx build
Change-Id: Ie597b076dabd2120992188122471716256e29537
Signed-off-by: Florent Benoit <fbenoit@redhat.com>

--- a/.github/workflows/buildx.yaml
+++ b/.github/workflows/buildx.yaml
@@ -8,6 +8,10 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
+    - uses: actions/setup-node@v1
+      name: Configuring nodejs 10.x version
+      with:
+        node-version: '10.x'    
     - name: Docker Buildx
       uses: crazy-max/ghaction-docker-buildx@v1.4.0
       with:
