fixup! Try buildx build
Change-Id: I1bb42fbaf39ed1f14d485a5d77a4e7ea9150a140
Signed-off-by: Florent Benoit <fbenoit@redhat.com>

--- a/.github/workflows/buildx.yaml
+++ b/.github/workflows/buildx.yaml
@@ -16,8 +16,8 @@ jobs:
     - name: login/yarn build
       run: |
         docker login -u "${QUAY_USERNAME}" -p "${QUAY_PASSWORD}" quay.io
-        echo "run yarn"
-        yarn
+        echo "run yarn without post install scripts"
+        yarn install --ignore-scripts
       env:
         QUAY_USERNAME: ${{ secrets.QUAY_USERNAME }}
         QUAY_PASSWORD: ${{ secrets.QUAY_PASSWORD }}      
