fixup! Try buildx build
Change-Id: I264637f120c829ad7abcfc137591cac1249c0711
Signed-off-by: Florent Benoit <fbenoit@redhat.com>

--- a/.github/workflows/buildx.yaml
+++ b/.github/workflows/buildx.yaml
@@ -27,8 +27,8 @@ jobs:
         export CURRENT_DIR=$(pwd)
         cd ${CURRENT_DIR}/dockerfiles/theia-dev
         ./build.sh --dockerfile:Dockerfile.alpine --skip-tests --dry-run --organization:quay.io/fbenoit --tag:buildx
-        docker buildx build --platform linux/amd64,linux/arm/v7 -t "quay.io/fbenoit/che-theia-dev:buildx" --push --file ./Dockerfile . 
+        docker buildx build --platform linux/amd64,linux/arm/v7 -t "quay.io/fbenoit/che-theia-dev:buildx" --push --file ./.Dockerfile . 
         echo "Building theia image"
         cd ${CURRENT_DIR}/dockerfiles/theia
         ./build.sh --dockerfile:Dockerfile.alpine --skip-tests --dry-run --organization:quay.io/fbenoit --tag:buildx
-        docker buildx build --platform linux/amd64,linux/arm/v7 -t "quay.io/fbenoit/che-theia:buildx" --push --file ./Dockerfile . 
+        docker buildx build --platform linux/amd64,linux/arm/v7 -t "quay.io/fbenoit/che-theia:buildx" --push --file ./.Dockerfile . 
