--- a/.github/workflows/buildx.yaml
+++ b/.github/workflows/buildx.yaml
@@ -18,20 +18,17 @@ jobs:
         docker login -u "${QUAY_USERNAME}" -p "${QUAY_PASSWORD}" quay.io
         echo "run yarn without post install scripts"
         yarn install --ignore-scripts
-        export CURRENT_DIR=$(pwd)
       env:
         QUAY_USERNAME: ${{ secrets.QUAY_USERNAME }}
         QUAY_PASSWORD: ${{ secrets.QUAY_PASSWORD }}
-#    - name: theia-dev image build
-#      run: |
-#        echo "Building theia-dev image"
-#        export CURRENT_DIR=$(pwd)
-#        cd ${CURRENT_DIR}/dockerfiles/theia-dev
-#        ./build.sh --dockerfile:Dockerfile.alpine --skip-tests --dry-run --organization:quay.io/fbenoit --tag:buildx
-#        docker buildx build --platform linux/amd64,linux/arm/v7 -t "quay.io/fbenoit/che-theia-dev:buildx" --push --file ./.Dockerfile . 
-    - name: theia image build
+    - name: theia images build
       run: |
+        echo "Building theia-dev image"
+        export CURRENT_DIR=$(pwd)
+        cd ${CURRENT_DIR}/dockerfiles/theia-dev
+        ./build.sh --dockerfile:Dockerfile.alpine --skip-tests --dry-run --organization:quay.io/fbenoit --tag:buildx
+        docker buildx build --platform linux/amd64,linux/arm/v7 -t "quay.io/fbenoit/che-theia-dev:buildx" --push --file ./.Dockerfile . 
         echo "Building theia image"
-        cd ${CURRENT_DIR}/dockerfiles/theia
+        cd dockerfiles/theia
         ./build.sh --dockerfile:Dockerfile.alpine --skip-tests --dry-run --organization:quay.io/fbenoit --tag:buildx --target:runtime
         docker buildx build --platform linux/amd64,linux/arm/v7 -t "quay.io/fbenoit/che-theia:buildx" --push --file ./.Dockerfile . 
