--- a/.github/workflows/buildx.yaml
+++ b/.github/workflows/buildx.yaml
@@ -30,5 +30,5 @@ jobs:
         docker buildx build --platform linux/amd64,linux/arm/v7 -t "quay.io/fbenoit/che-theia-dev:buildx" --push --file ./.Dockerfile . 
         echo "Building theia image"
         cd ${CURRENT_DIR}/dockerfiles/theia
-        ./build.sh --dockerfile:Dockerfile.alpine --skip-tests --dry-run --organization:quay.io/fbenoit --tag:buildx --target:runtime
+        ./build.sh --dockerfile:Dockerfile.alpine --skip-tests --dry-run --organization:quay.io/fbenoit --tag:buildx --target:runtime --build-args:DO_REMOTE_CHECK=false
         docker buildx build --platform linux/amd64,linux/arm/v7 -t "quay.io/fbenoit/che-theia:buildx" --push --file ./.Dockerfile . 
