--- a/.github/workflows/buildx.yaml
+++ b/.github/workflows/buildx.yaml
@@ -25,7 +25,7 @@ jobs:
       run: |
         cd dockerfiles/theia
         ./build.sh --dockerfile:Dockerfile.alpine --skip-tests --dry-run --organization:quay.io/fbenoit --tag:buildx --target:runtime --build-args:DO_REMOTE_CHECK=false --branch:master --git-ref:"refs\\/heads\\/master"
-        docker buildx build --platform linux/amd64,linux/arm/v7 -t "quay.io/fbenoit/che-theia:buildx" --push --file ./.Dockerfile . 
+        docker buildx build --platform linux/arm/v7 -t "quay.io/fbenoit/che-theia:buildx" --push --file ./.Dockerfile . 
 
 #        echo "Building theia-dev image"
 #        export CURRENT_DIR=$(pwd)
