--- a/.github/workflows/buildx.yaml
+++ b/.github/workflows/buildx.yaml
@@ -21,15 +21,14 @@ jobs:
       env:
         QUAY_USERNAME: ${{ secrets.QUAY_USERNAME }}
         QUAY_PASSWORD: ${{ secrets.QUAY_PASSWORD }}
-    - name: theia images build
+    - name: theia-dev images build
       run: |
         echo "Building theia-dev image"
         cd dockerfiles/theia-dev
         ./build.sh --dockerfile:Dockerfile.alpine --skip-tests --dry-run --organization:quay.io/fbenoit --tag:buildx
-        docker buildx build --platform linux/amd64 -t "quay.io/fbenoit/che-theia-dev:buildx" --push --file ./.Dockerfile . 
+        docker buildx build --platform linux/amd64,linux/arm64,linux/ppc64le,linux/s390x,linux/arm/v7 -t "quay.io/fbenoit/che-theia-dev:buildx" --push --file ./.Dockerfile . 
     - name: theia images build
       run: |
         cd dockerfiles/theia
         ./build.sh --dockerfile:Dockerfile.alpine --skip-tests --dry-run --organization:quay.io/fbenoit --tag:buildx --target:runtime --build-args:DO_REMOTE_CHECK=false --branch:master --git-ref:"refs\\/heads\\/master"
-        docker buildx build --platform linux/amd64 -t "quay.io/fbenoit/che-theia:buildx" --push --file ./.Dockerfile . 
-
+        docker buildx build --platform linux/amd64,linux/arm64,linux/ppc64le,linux/s390x,linux/arm/v7 -t "quay.io/fbenoit/che-theia:buildx" --push --file ./.Dockerfile . 
