fixup! Try buildx build
Change-Id: I4f9be48e9f683576ff8d2e37f20854a3bd488618
Signed-off-by: Florent Benoit <fbenoit@redhat.com>

--- a/dockerfiles/theia-dev/Dockerfile
+++ b/dockerfiles/theia-dev/Dockerfile
@@ -43,8 +43,10 @@ EXPOSE 3000 3030
 # Configure npm and yarn to use home folder for global dependencies
 RUN npm config set prefix "${HOME}/.npm-global" && \
     echo "--global-folder \"${HOME}/.yarn-global\"" > ${HOME}/.yarnrc && \
+    echo "yarn ${YARN_FLAGS} global add yo generator-code vsce @theia/generator-plugin@0.0.1-1562578105 file:${HOME}/eclipse-che-theia-generator.tgz" && \
     # add eclipse che theia generator
     yarn ${YARN_FLAGS} global add yo generator-code vsce @theia/generator-plugin@0.0.1-1562578105 file:${HOME}/eclipse-che-theia-generator.tgz && \
+    echo "after yarn setup" && \
     rm -rf ${HOME}/eclipse-che-theia-generator.tgz && \
     # Generate .passwd.template \
     cat /etc/passwd | \
