--- a/dockerfiles/theia-dev/Dockerfile
+++ b/dockerfiles/theia-dev/Dockerfile
@@ -42,8 +42,9 @@ EXPOSE 3000 3030
 
 # Configure npm and yarn to use home folder for global dependencies
 RUN npm config set prefix "${HOME}/.npm-global" && \
-    echo "--global-folder \"${HOME}/.yarn-global\"" > ${HOME}/.yarnrc && \
+    echo "--global-folder \"${HOME}/.yarn-global\"\nnetwork-timeout 600000" > ${HOME}/.yarnrc && \
     echo "yarn ${YARN_FLAGS} global add yo generator-code vsce @theia/generator-plugin@0.0.1-1562578105 file:${HOME}/eclipse-che-theia-generator.tgz" && \
+    cat ${HOME}/.yarnrc && \
     # add eclipse che theia generator
     yarn ${YARN_FLAGS} global add yo generator-code vsce @theia/generator-plugin@0.0.1-1562578105 file:${HOME}/eclipse-che-theia-generator.tgz && \
     echo "after yarn setup" && \
