fixup! Try buildx build
Change-Id: I05948230bb5037c5f1e20283d54e3b1b1798804e
Signed-off-by: Florent Benoit <fbenoit@redhat.com>

--- a/.github/workflows/buildx.yaml
+++ b/.github/workflows/buildx.yaml
@@ -22,6 +22,9 @@ jobs:
         docker login -u "${QUAY_USERNAME}" -p "${QUAY_PASSWORD}" quay.io
         echo "run yarn without post install scripts"
         df -h
+        mkdir foo
+        cd foo
+        yarn add electron
         yarn install --ignore-scripts
         sudo swapoff -a
         sudo rm -f /swapfile
@@ -36,7 +39,7 @@ jobs:
         cd dockerfiles/theia
         ./build.sh --dockerfile:Dockerfile.alpine --skip-tests --dry-run --organization:quay.io/fbenoit --tag:buildx --target:runtime --build-args:DO_REMOTE_CHECK=false --branch:master --git-ref:"refs\\/heads\\/master"
         cat .Dockerfile
-        docker buildx build --platform linux/amd64,linux/arm64,linux/ppc64le,linux/s390x,linux/arm/v7 -t "quay.io/fbenoit/che-theia:buildx" --push --file ./.Dockerfile . 
+        docker buildx build --platform linux/s390x -t "quay.io/fbenoit/che-theia:buildx" --push --file ./.Dockerfile . 
 #    - name: theia-dev images build
 #      run: |
 #        echo "Building theia-dev image"
