--- a/.github/workflows/buildx.yaml
+++ b/.github/workflows/buildx.yaml
@@ -36,7 +36,7 @@ jobs:
         cd dockerfiles/theia
         ./build.sh --dockerfile:Dockerfile.alpine --skip-tests --dry-run --organization:quay.io/fbenoit --tag:buildx --target:runtime --build-args:DO_REMOTE_CHECK=false --branch:master --git-ref:"refs\\/heads\\/master"
         cat .Dockerfile
-        docker buildx build --platform linux/s390x,linux/amd64 -t "quay.io/fbenoit/che-theia:buildx" --push --file ./.Dockerfile . 
+        docker buildx build --platform linux/amd64,linux/arm64,linux/ppc64le,linux/s390x,linux/arm/v7 -t "quay.io/fbenoit/che-theia:buildx" --push --file ./.Dockerfile . 
 #    - name: theia-dev images build
 #      run: |
 #        echo "Building theia-dev image"
