--- a/.github/workflows/buildx.yml
+++ b/.github/workflows/buildx.yml
@@ -19,7 +19,7 @@ jobs:
     - name: quay.io & docker.io login
       run: |
         docker login -u "${{ secrets.QUAY_USERNAME }}" -p "${{ secrets.QUAY_PASSWORD }}" quay.io
-        docker login -u "${{ secrets.DOCKER_USERNAME }}" -p "${{ secrets.DOCKER_PASSWORD }}" docker.io
+        docker login -u "${{ secrets.DOCKERHUB_USERNAME }}" -p "${{ secrets.DOCKERHUB_PASSWORD }}" docker.io
     - name: yarn build
       run: |
         echo "Running yarn without post install scripts"
@@ -50,7 +50,7 @@ jobs:
       - name: quay.io & docker.io login
         run: |
           docker login -u "${{ secrets.QUAY_USERNAME }}" -p "${{ secrets.QUAY_PASSWORD }}" quay.io
-          docker login -u "${{ secrets.DOCKER_USERNAME }}" -p "${{ secrets.DOCKER_PASSWORD }}" docker.io
+          docker login -u "${{ secrets.DOCKERHUB_USERNAME }}" -p "${{ secrets.DOCKERHUB_PASSWORD }}" docker.io
       - name: yarn build
         run: |
           echo "Running yarn without post install scripts"
