--- a/.github/workflows/buildx.yml
+++ b/.github/workflows/buildx.yml
@@ -90,3 +90,9 @@ jobs:
           cat .multi.Dockerfile
           echo "Building multi-arch image with buildx..."
           docker buildx build --platform linux/amd64,linux/arm64,linux/ppc64le,linux/s390x,linux/arm/v7 --cache-from="type=registry,ref=${IMAGE_CACHE_FULL_MULTI}" --cache-to="type=registry,ref=${IMAGE_CACHE_FULL_MULTI},mode=max" -t ${IMAGE_FULL_MULTI} --push --file ./.multi.Dockerfile .
+          cd ../dockerfiles/theia-endpoint-runtime-binary
+          ./build.sh --dockerfile:Dockerfile.alpine --skip-tests --dry-run --organization:quay.io/eclipse --tag:buildx
+          IMAGE_FULL="quay.io/eclipse/che-theia-endpoint-runtime-binary:multi-arch"
+          IMAGE_CACHE="docker.io/chedockerfiles/che-theia-endpoint-runtime-binary:multi-arch-cache"
+          docker buildx build --cache-from="type=registry,ref=${IMAGE_CACHE}" --cache-to="type=registry,ref=${IMAGE_CACHE},mode=max" --platform linux/arm/v7,linux/amd64,linux/arm64,linux/ppc64le,linux/s390x -t "${IMAGE_FULL}" --push --file ./.Dockerfile .
+  
