--- a/.github/workflows/buildx.yml
+++ b/.github/workflows/buildx.yml
@@ -69,7 +69,6 @@ jobs:
           cd dockerfiles/theia-dev
           TAG_TMP="next-tmp-amd64"
           IMAGE_TMP="quay.io/eclipse/che-theia:${TAG_TMP}"
-          docker pull quay.io/eclipse/che-theia-dev:multi-arch || echo "image not online"
           ./build.sh --dockerfile:Dockerfile.alpine --skip-tests --organization:quay.io/eclipse --tag:buildx --build-args:DO_REMOTE_CHECK=false --branch:master --git-ref:"refs\\/heads\\/master"
           cd ../theia
           ./build.sh --dockerfile:Dockerfile.alpine --skip-tests --dry-run --organization:quay.io/eclipse --tag:buildx --target:runtime --build-args:DO_REMOTE_CHECK=false --branch:master --git-ref:"refs\\/heads\\/master"
@@ -90,10 +89,10 @@ jobs:
           cat .end-dockerfile >> .multi.Dockerfile
           cat .multi.Dockerfile
           echo "Building multi-arch image with buildx..."
-          docker buildx build --platform linux/amd64,linux/arm64,linux/ppc64le,linux/s390x,linux/arm/v7 --cache-from="type=registry,ref=${IMAGE_CACHE_FULL_MULTI}" --cache-to="type=registry,ref=${IMAGE_CACHE_FULL_MULTI},mode=max" -t ${IMAGE_FULL_MULTI} --push --file ./.multi.Dockerfile .
+          docker buildx build --platform linux/amd64,linux/arm64,linux/ppc64le,linux/s390x --cache-from="type=registry,ref=${IMAGE_CACHE_FULL_MULTI}" --cache-to="type=registry,ref=${IMAGE_CACHE_FULL_MULTI},mode=max" -t ${IMAGE_FULL_MULTI} --push --file ./.multi.Dockerfile .
           cd ../dockerfiles/theia-endpoint-runtime-binary
           ./build.sh --dockerfile:Dockerfile.alpine --skip-tests --dry-run --organization:quay.io/eclipse --tag:buildx
           IMAGE_FULL="quay.io/eclipse/che-theia-endpoint-runtime-binary:multi-arch"
           IMAGE_CACHE="docker.io/chedockerfiles/che-theia-endpoint-runtime-binary:multi-arch-cache"
-          docker buildx build --cache-from="type=registry,ref=${IMAGE_CACHE}" --cache-to="type=registry,ref=${IMAGE_CACHE},mode=max" --platform linux/arm/v7,linux/amd64,linux/arm64,linux/ppc64le,linux/s390x -t "${IMAGE_FULL}" --push --file ./.Dockerfile .
+          docker buildx build --cache-from="type=registry,ref=${IMAGE_CACHE}" --cache-to="type=registry,ref=${IMAGE_CACHE},mode=max" --platform linux/amd64,linux/arm64,linux/ppc64le,linux/s390x -t "${IMAGE_FULL}" --push --file ./.Dockerfile .
   
