--- a/.github/workflows/buildx.yml
+++ b/.github/workflows/buildx.yml
@@ -39,8 +39,7 @@ jobs:
         ./build.sh --dockerfile:Dockerfile.alpine --skip-tests --dry-run --organization:quay.io/eclipse --tag:buildx
         IMAGE_FULL="quay.io/eclipse/che-theia-dev:multi-arch"
         IMAGE_CACHE="docker.io/chedockerfiles/che-theia-dev:multi-arch-cache"
-        docker version
-        docker buildx build --cache-from="type=registry,ref=${IMAGE_CACHE}" --cache-to="type=registry,ref=${IMAGE_CACHE},mode=max" --squash --platform linux/arm/v7,linux/amd64,linux/arm64,linux/ppc64le,linux/s390x -t "${IMAGE_FULL}" --push --file ./.Dockerfile .
+        docker buildx build --cache-from="type=registry,ref=${IMAGE_CACHE}" --cache-to="type=registry,ref=${IMAGE_CACHE},mode=max" --platform linux/amd64,linux/arm64,linux/ppc64le,linux/s390x -t "${IMAGE_FULL}" --push --file ./.Dockerfile .
   build-multi-theia-images:
     runs-on: ubuntu-latest
     steps:
