--- a/.github/workflows/buildx.yml
+++ b/.github/workflows/buildx.yml
@@ -17,10 +17,9 @@ jobs:
       uses: actions/setup-node@v1
       with:
         node-version: '10.x'
-    - name: quay.io & docker.io login
+    - name: quay.io login
       run: |
         docker login -u "${{ secrets.QUAY_USERNAME }}" -p "${{ secrets.QUAY_PASSWORD }}" quay.io
-        docker login -u "${{ secrets.DOCKERHUB_USERNAME }}" -p "${{ secrets.DOCKERHUB_PASSWORD }}" docker.io
     - name: yarn build
       run: |
         echo "Running yarn without post install scripts"
@@ -38,9 +37,6 @@ jobs:
         cd dockerfiles/theia-dev
         ./build.sh --dockerfile:Dockerfile.alpine --skip-tests --dry-run --organization:quay.io/eclipse --tag:buildx
         IMAGE_FULL="quay.io/eclipse/che-theia-dev:multi-arch"
-        IMAGE_CACHE="quay.io/eclipse/che-theia-dev:multi-arch-cache"
-        #IMAGE_CACHE="docker.io/chedockerfiles/che-theia-dev:multi-arch-cache"
-        #docker buildx build --cache-from="type=registry,ref=${IMAGE_CACHE}" --cache-to="type=registry,ref=${IMAGE_CACHE}" --platform linux/amd64,linux/arm64,linux/ppc64le,linux/s390x -t "${IMAGE_FULL}" --push --file ./.Dockerfile .
         docker buildx build --cache-from="type=registry,ref=${IMAGE_FULL}" --cache-to="type=inline" --platform linux/amd64,linux/arm64,linux/ppc64le,linux/s390x -t "${IMAGE_FULL}" --push --file ./.Dockerfile .
   build-multi-theia-images:
     runs-on: ubuntu-latest
@@ -50,10 +46,9 @@ jobs:
         with:
           version: v0.4.1
       - uses: actions/checkout@v2
-      - name: quay.io & docker.io login
+      - name: quay.io login
         run: |
           docker login -u "${{ secrets.QUAY_USERNAME }}" -p "${{ secrets.QUAY_PASSWORD }}" quay.io
-          docker login -u "${{ secrets.DOCKERHUB_USERNAME }}" -p "${{ secrets.DOCKERHUB_PASSWORD }}" docker.io
       - name: yarn build
         run: |
           echo "Running yarn without post install scripts"
@@ -78,7 +73,6 @@ jobs:
           docker build -t ${IMAGE_TMP} --target build-result --file ./.Dockerfile . 
           docker push ${IMAGE_TMP}
           IMAGE_FULL_MULTI="quay.io/eclipse/che-theia:multi-arch"
-          IMAGE_CACHE_FULL_MULTI="docker.io/chedockerfiles/che-theia:multi-arch-cache"
           echo "Generate multi-arch build by replacing build-result image"
           echo "FROM ${IMAGE_TMP} as theia" > .multi.Dockerfile
           cat "docker/alpine/build-result-from.dockerfile" >> .multi.Dockerfile
@@ -91,10 +85,9 @@ jobs:
           cat .end-dockerfile >> .multi.Dockerfile
           cat .multi.Dockerfile
           echo "Building multi-arch image with buildx..."
-          docker buildx build --platform linux/amd64,linux/arm64,linux/ppc64le,linux/s390x --cache-from="type=registry,ref=${IMAGE_CACHE_FULL_MULTI}" --cache-to="type=registry,ref=${IMAGE_CACHE_FULL_MULTI},mode=max" -t ${IMAGE_FULL_MULTI} --push --file ./.multi.Dockerfile .
+          docker buildx build --platform linux/amd64,linux/arm64,linux/ppc64le,linux/s390x --cache-from="type=registry,ref=${IMAGE_FULL_MULTI}" --cache-to="type=inline" -t ${IMAGE_FULL_MULTI} --push --file ./.multi.Dockerfile .
           cd ../dockerfiles/theia-endpoint-runtime-binary
           ./build.sh --dockerfile:Dockerfile.alpine --skip-tests --dry-run --organization:quay.io/eclipse --tag:buildx
           IMAGE_FULL="quay.io/eclipse/che-theia-endpoint-runtime-binary:multi-arch"
-          IMAGE_CACHE="docker.io/chedockerfiles/che-theia-endpoint-runtime-binary:multi-arch-cache"
-          docker buildx build --cache-from="type=registry,ref=${IMAGE_CACHE}" --cache-to="type=registry,ref=${IMAGE_CACHE},mode=max" --platform linux/amd64,linux/arm64,linux/ppc64le,linux/s390x -t "${IMAGE_FULL}" --push --file ./.Dockerfile .
+          docker buildx build --cache-from="type=registry,ref=${IMAGE_FULL}" --cache-to="type=inline" --platform linux/amd64,linux/arm64,linux/ppc64le,linux/s390x -t "${IMAGE_FULL}" --push --file ./.Dockerfile .
   
