Added tools/automation/ to yarn workspaces, made sure /tmp/theia is removed
Signed-off-by: Eric Williams <ericwill@redhat.com>

--- a/.github/workflows/publish-built-in-extension-report.yaml
+++ b/.github/workflows/publish-built-in-extension-report.yaml
@@ -35,4 +35,4 @@ jobs:
       env:
         DATE_TIME: "${{ steps.current-date-time.outputs.formattedTime }}" 
       run: |
-        ./tools/automation/.ci/publish-report.sh
+        ./.ci/publish-report.sh
