--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
     "packages": [
       "extensions/*",
       "plugins/*",
-      "generator"
+      "generator",
+      "tools/automation/"
     ]
   }
 }
