use same scripts than other modules (clean/build/prepare)
Change-Id: Ideae144de030329a8ebd95a107ebdc0502bfb720
Signed-off-by: Florent Benoit <fbenoit@redhat.com>

--- a/tools/automation/package.json
+++ b/tools/automation/package.json
@@ -5,7 +5,9 @@
   "description": "Scripts for updating, adding, removing, and building extensions in che-theia",
   "main": "check-extension-updates.js",
   "scripts": {
-    "prepare": "yarn run format && yarn run compile && yarn run lint",
+    "prepare": "yarn run clean && yarn run build",
+    "clean": "rimraf lib",
+    "build": "yarn run format && yarn run compile && yarn run lint",
     "compile": "tsc --project .",
     "format": "prettier --write **/*.ts **/**/*.ts package.json",
     "format-check": "prettier --check **/*.ts **/**/*.ts package.json",
