fix workspace reference
Change-Id: I4753dc9d31529b8f3c6bcb8f14c4e005364e0aaf
Signed-off-by: Florent Benoit <fbenoit@redhat.com>

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,7 +9,7 @@
         "dev-packages/*/src",
         "plugins/*/src",
         "extensions/*/src",
-        "tools/automation/*/src"
+        "tools/*/src"
     ],
     "types": [
         "node", "jest"
