fix package name
Change-Id: I0fd3b4f271a566febb59841ca17dc6811b95d7c1
Signed-off-by: Florent Benoit <fbenoit@redhat.com>

--- a/tools/automation/package.json
+++ b/tools/automation/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "built-in-extensions-update-automation",
-  "version": "0.0.0",
+  "name": "@eclipse-che/theia-built-in-extensions-update-automation",
+  "version": "0.0.1",
   "private": true,
   "description": "Scripts for updating, adding, removing, and building extensions in che-theia",
   "main": "check-extension-updates.js",
