--- a/tools/automation/tsconfig.json
+++ b/tools/automation/tsconfig.json
@@ -1,30 +1,18 @@
 {
-  "compilerOptions": {
-    "target": "es6",
-    "module": "commonjs",
-    "moduleResolution": "node",
-    "outDir": "./lib",
-    "sourceMap": true,
-    "noEmitOnError": true,
-    "noImplicitReturns": true,
-    "noImplicitThis": true,
-    "noUnusedLocals": false,
-    "removeComments": true,
-    "noFallthroughCasesInSwitch": true,
-    "strict": true,
-    "strictPropertyInitialization": false,
-    "skipLibCheck": true,
-    "skipDefaultLibCheck": true,
-    "types": [
-      "jest"
-    ],
-    "experimentalDecorators": true,
-    "emitDecoratorMetadata": true
-  },
-  "include": [
-    "src/**/*"
-  ],
-  "exclude": [
-    "node_modules"
-  ]
+    "extends": "../../configs/base.tsconfig",
+    "compilerOptions": {
+        "target": "es6",
+        "lib": [
+            "es6",
+        ],
+        "sourceMap": true,
+        "rootDir": "src",
+        "outDir": "lib",
+        "types": [
+            "node", "jest"
+        ]
+    },
+    "include": [
+        "src"
+    ]
 }
