--- a/extensions/eclipse-che-theia-remote-impl-che-server/package.json
+++ b/extensions/eclipse-che-theia-remote-impl-che-server/package.json
@@ -25,8 +25,9 @@
     "lint": "if-env SKIP_LINT=true && echo 'skip lint check' || eslint --cache=true --no-error-on-unmatched-pattern=true '{src,tests}/**/*.ts'",
     "lint:fix": "eslint --fix --cache=true --no-error-on-unmatched-pattern=true \"{src,tests}/**/*.{ts,tsx}\"",
     "compile": "tsc",
-    "build": "concurrently -n \"format,lint,compile\" -c \"red,green,blue\" \"yarn format\" \"yarn lint\" \"yarn compile\"",
+    "build": "concurrently -n \"format,lint,compile,test\" -c \"red,green,blue,purple\" \"yarn format\" \"yarn lint\" \"yarn compile\" \"yarn test\"",
     "watch": "tsc -w",
+    "test": "if-env SKIP_TEST=true && echo 'skip test' || jest --forceExit",
     "publish:next": "yarn publish  --registry=https://registry.npmjs.org/ --no-git-tag-version --new-version 0.0.1-\"$(date +%s)\""
   },
   "license": "EPL-2.0",
